# Cleaver

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
cleaver/: index.html  sidebar-items.js
cleaver/analysis/: index.html  sidebar-items.js
cleaver/analysis/semantic/: index.html  sidebar-items.js
cleaver/analysis/types/: check_function.v.html  check_function_with_diag.v.html  check_statement.v.html  deduce.v.html  enum.TypeError.html  fn.check_call.html  fn.check_function.html  fn.check_function_with_diag.html  fn.check_statement.html  fn.deduce.html  fn.expect.html  index.html  sidebar-items.js  struct.Context.html  type.Result.html
cleaver/diag/: index.html  sidebar-items.js  struct.Config.html
cleaver/diag/ast/: index.html
cleaver/diag/dot/: fn.run.html  index.html  sidebar-items.js
cleaver/diag/symbols/: index.html  (+1 more)
cleaver/fe/: check_with_diag.v.html  fn.check.html  fn.check_with_diag.html  fn.parse.html  fn.parse_with_diag.html  index.html  parse_with_diag.v.html  sidebar-items.js  struct.Position.html
cleaver/utils/: index.html  sidebar-items.js
doc/blog/: 2016-07-09_what-is-this-about.md  2016-07-12_setting-up-travis.md  2016-07-23_fresh-meat.md
examples/: dangling_else.gib  fib.gib  scopes.gib
src/: lib.rs
src/analysis/: mod.rs  types.rs
src/diag/: ast.rs  symbols.rs
src/diagnostics/: mod.rs  symbols.rs
src/fe/: ast.rs  error.rs  mod.rs  parser.rs  symbolizer.rs
src/front/: ast.rs  mod.rs  symbols.rs
src/utils/: lenny.rs  lenny_ears.inc  lenny_eyes.inc  lenny_mouths.inc  mod.rs
(+124 files in other folders)
